# MayaMeshTools

./: CMakeLists.txt  README.md
scripts/: AEMeshLoaderTemplate.mel  MayaMeshTools.mel
src/: FileSystem.h  MeshLoader.cpp  MeshLoader.h  OBJLoader.h  PluginMain.cpp
